
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8_t ;
struct uECC_Curve_t {int dummy; } ;
typedef int public_computed ;
typedef int public ;
typedef int private ;


 int fflush (int ) ;
 scalar_t__ memcmp (int *,int *,int) ;
 int memset (int *,int ,int) ;
 int printf (char*) ;
 int stdout ;
 int uECC_compute_public_key (int *,int *,struct uECC_Curve_t const*) ;
 int uECC_make_key (int *,int *,struct uECC_Curve_t const*) ;
 struct uECC_Curve_t* uECC_secp160r1 () ;
 struct uECC_Curve_t* uECC_secp192r1 () ;
 struct uECC_Curve_t* uECC_secp224r1 () ;
 struct uECC_Curve_t* uECC_secp256k1 () ;
 struct uECC_Curve_t* uECC_secp256r1 () ;
 int vli_print (char*,int *,int) ;

int main() {
    int i;
    int success;
    uint8_t private[32];
    uint8_t public[64];
    uint8_t public_computed[64];

    int c;

    const struct uECC_Curve_t * curves[5];
    int num_curves = 0;
    printf("Testing 256 random private key pairs\n");
    for (c = 0; c < num_curves; ++c) {
        for (i = 0; i < 256; ++i) {
            printf(".");
            fflush(stdout);

            memset(public, 0, sizeof(public));
            memset(public_computed, 0, sizeof(public_computed));

            if (!uECC_make_key(public, private, curves[c])) {
                printf("uECC_make_key() failed\n");
                continue;
            }

            if (!uECC_compute_public_key(private, public_computed, curves[c])) {
                printf("uECC_compute_public_key() failed\n");
            }

            if (memcmp(public, public_computed, sizeof(public)) != 0) {
                printf("Computed and provided public keys are not identical!\n");
                vli_print("Computed public key = ", public_computed, sizeof(public_computed));
                vli_print("Provided public key = ", public, sizeof(public));
                vli_print("Private key = ", private, sizeof(private));
            }
        }

        printf("\n");
        printf("Testing private key = 0\n");

        memset(private, 0, sizeof(private));
        success = uECC_compute_public_key(private, public_computed, curves[c]);
        if (success) {
            printf("uECC_compute_public_key() should have failed\n");
        }
        printf("\n");
    }

    return 0;
}
